# pick_ik

./: CMakeLists.txt  package.xml  pick_ik_kinematics_description.xml
include/pick_ik/: goal.hpp  pick_ik_parameters.hpp  robot.hpp
include/rsl/: random.hpp
src/: goal.cpp  ik_gradient.cpp  ik_memetic.cpp  pick_ik_plugin.cpp  robot.cpp
src/rsl/: random.cpp
tests/: ik_tests.cpp  robot_tests.cpp
